[project]
name = "md-to-ebook"
version = "0.1.0"
description = "A tool to export Markdown documents to a single PDF file for eBook creation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "flask>=3.1.1",
    "jinja2>=3.1.6",
    "lxml>=6.0.0",
    "markdown2>=2.5.3",
    "playwright>=1.53.0",
    "pygments>=2.19.2",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "weasyprint>=65.1",
]
